--- a/about-us.htm
+++ b/about-us.htm
@@ -142,16 +142,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-12-31-free-clash.htm" title="12月31日→19.5M/S|2025年最新免费节点Shadowrocket节点/SSR节点/Singbox节点/V2ray节点/Clash节点订阅链接地址，便宜机场推荐">12月31日→19.5M/S|2025年最新免费节点Shadowrocket节点/SSR节点/Singbox节点/V2ray节点/Clash节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-14-clash-windows.htm" title="1月14日→18.7M/S|2025年最新免费节点Singbox节点/SSR节点/V2ray节点/Clash节点/Shadowrocket节点订阅链接地址，便宜机场推荐">1月14日→18.7M/S|2025年最新免费节点Singbox节点/SSR节点/V2ray节点/Clash节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2026-1-26-free-subscribe-node.htm" title="1月26日→22.8M/S|2025年最新免费节点Singbox节点/Shadowrocket节点/Trojan节点/Clash节点/V2ray节点/SSR节点订阅链接地址，便宜机场推荐">1月26日→22.8M/S|2025年最新免费节点Singbox节点/Shadowrocket节点/Trojan节点/Clash节点/V2ray节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-14-node-share-links.htm" title="12月14日→22.7M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点订阅链接地址，便宜机场推荐">12月14日→22.7M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Clash节点/SSR节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-25-clash-node-daily-updates.htm" title="1月25日→22.8M/S|2025年最新免费节点V2ray节点/Clash节点/Shadowrocket节点/SSR节点/Singbox节点/Trojan节点订阅链接地址，便宜机场推荐">1月25日→22.8M/S|2025年最新免费节点V2ray节点/Clash节点/Shadowrocket节点/SSR节点/Singbox节点/Trojan节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-9-clash-v2ray-ss-ssr.htm" title="1月9日→22.4M/S|2025年最新免费节点V2ray节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点订阅链接地址，便宜机场推荐">1月9日→22.4M/S|2025年最新免费节点V2ray节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2026-1-18-clash-windows.htm" title="1月18日→19.4M/S|2025年最新免费节点Clash节点/SSR节点/Singbox节点/Trojan节点/V2ray节点/Shadowrocket节点订阅链接地址，便宜机场推荐">1月18日→19.4M/S|2025年最新免费节点Clash节点/SSR节点/Singbox节点/Trojan节点/V2ray节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2026-1-21-free-subscribe-node.htm" title="1月21日→22.8M/S|2025年最新免费节点SSR节点/Singbox节点/Shadowrocket节点/Clash节点/Trojan节点/V2ray节点订阅链接地址，便宜机场推荐">1月21日→22.8M/S|2025年最新免费节点SSR节点/Singbox节点/Shadowrocket节点/Clash节点/Trojan节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-27-clash-v2ray-ss-ssr.htm" title="12月27日→22.8M/S|2025年最新免费节点V2ray节点/SSR节点/Shadowrocket节点/Singbox节点/Clash节点订阅链接地址，便宜机场推荐">12月27日→22.8M/S|2025年最新免费节点V2ray节点/SSR节点/Shadowrocket节点/Singbox节点/Clash节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-13-free-v2ray.htm" title="12月13日→19.9M/S|2025年最新免费节点Singbox节点/Shadowrocket节点/SSR节点/Clash节点/V2ray节点订阅链接地址，便宜机场推荐">12月13日→19.9M/S|2025年最新免费节点Singbox节点/Shadowrocket节点/SSR节点/Clash节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-19-node-share.htm" title="1月19日→18.6M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Trojan节点/Singbox节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐">1月19日→18.6M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Trojan节点/Singbox节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-4-free-clash-subscribe.htm" title="1月4日→20.2M/S|2025年最新免费节点V2ray节点/Singbox节点/Shadowrocket节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐">1月4日→20.2M/S|2025年最新免费节点V2ray节点/Singbox节点/Shadowrocket节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-4-clash-node.htm" title="2月4日→18.2M/S|2025年最新免费节点Singbox节点/Shadowrocket节点/Clash节点/V2ray节点/SSR节点/Trojan节点订阅链接地址，便宜机场推荐">2月4日→18.2M/S|2025年最新免费节点Singbox节点/Shadowrocket节点/Clash节点/V2ray节点/SSR节点/Trojan节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-30-free-ssr-subscribe.htm" title="1月30日→18.2M/S|2025年最新免费节点Trojan节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点/SSR节点订阅链接地址，便宜机场推荐">1月30日→18.2M/S|2025年最新免费节点Trojan节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-31-free-subscribe-node.htm" title="1月31日→18.4M/S|2025年最新免费节点Shadowrocket节点/Clash节点/SSR节点/Trojan节点/V2ray节点/Singbox节点订阅链接地址，便宜机场推荐">1月31日→18.4M/S|2025年最新免费节点Shadowrocket节点/Clash节点/SSR节点/Trojan节点/V2ray节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-28-free-clash-subscribe.htm" title="1月28日→20.7M/S|2025年最新免费节点Clash节点/Shadowrocket节点/Trojan节点/V2ray节点/Singbox节点/SSR节点订阅链接地址，便宜机场推荐">1月28日→20.7M/S|2025年最新免费节点Clash节点/Shadowrocket节点/Trojan节点/V2ray节点/Singbox节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-20-free-node-subscribe.htm" title="1月20日→22M/S|2025年最新免费节点Singbox节点/Shadowrocket节点/Trojan节点/V2ray节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐">1月20日→22M/S|2025年最新免费节点Singbox节点/Shadowrocket节点/Trojan节点/V2ray节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -163,10 +163,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2026-01/" title="2026-01 归档">2026-01</a></h4>
+                <h4><span class="badge" style="float: right;">5</span> <a href="/date/2026-02/" title="2026-02 归档">2026-02</a></h4>
             </li>
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">19</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
+                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2026-01/" title="2026-01 归档">2026-01</a></h4>
             </li>
                     </ul>
     </div>
