--- a/client.htm
+++ b/client.htm
@@ -293,16 +293,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-12-25-free-node-subscribe.htm" title="12月25日→19.3M/S|2025年最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点订阅链接地址，便宜机场推荐">12月25日→19.3M/S|2025年最新免费节点Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-7-clash-windows.htm" title="1月7日→19.3M/S|2025年最新免费节点Clash节点/SSR节点/V2ray节点/Singbox节点/Shadowrocket节点订阅链接地址，便宜机场推荐">1月7日→19.3M/S|2025年最新免费节点Clash节点/SSR节点/V2ray节点/Singbox节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-19-node-share.htm" title="1月19日→18.6M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Trojan节点/Singbox节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐">1月19日→18.6M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Trojan节点/Singbox节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-27-free-ssr-subscribe.htm" title="1月27日→22.6M/S|2025年最新免费节点Singbox节点/Shadowrocket节点/SSR节点/Clash节点/V2ray节点/Trojan节点订阅链接地址，便宜机场推荐">1月27日→22.6M/S|2025年最新免费节点Singbox节点/Shadowrocket节点/SSR节点/Clash节点/V2ray节点/Trojan节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-19-clash-v2ray-ss-ssr.htm" title="12月19日→22M/S|2025年最新免费节点Clash节点/V2ray节点/SSR节点/Singbox节点/Shadowrocket节点订阅链接地址，便宜机场推荐">12月19日→22M/S|2025年最新免费节点Clash节点/V2ray节点/SSR节点/Singbox节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-22-free-v2ray-subscribe.htm" title="1月22日→23M/S|2025年最新免费节点V2ray节点/Singbox节点/Clash节点/Shadowrocket节点/Trojan节点/SSR节点订阅链接地址，便宜机场推荐">1月22日→23M/S|2025年最新免费节点V2ray节点/Singbox节点/Clash节点/Shadowrocket节点/Trojan节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-2-node-share.htm" title="1月2日→20.5M/S|2025年最新免费节点SSR节点/Clash节点/V2ray节点/Singbox节点/Shadowrocket节点订阅链接地址，便宜机场推荐">1月2日→20.5M/S|2025年最新免费节点SSR节点/Clash节点/V2ray节点/Singbox节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-14-clash-windows.htm" title="1月14日→18.7M/S|2025年最新免费节点Singbox节点/SSR节点/V2ray节点/Clash节点/Shadowrocket节点订阅链接地址，便宜机场推荐">1月14日→18.7M/S|2025年最新免费节点Singbox节点/SSR节点/V2ray节点/Clash节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2026-1-18-clash-windows.htm" title="1月18日→19.4M/S|2025年最新免费节点Clash节点/SSR节点/Singbox节点/Trojan节点/V2ray节点/Shadowrocket节点订阅链接地址，便宜机场推荐">1月18日→19.4M/S|2025年最新免费节点Clash节点/SSR节点/Singbox节点/Trojan节点/V2ray节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-17-clash-node.htm" title="12月17日→22.8M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐">12月17日→22.8M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Singbox节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-31-free-subscribe-node.htm" title="1月31日→18.4M/S|2025年最新免费节点Shadowrocket节点/Clash节点/SSR节点/Trojan节点/V2ray节点/Singbox节点订阅链接地址，便宜机场推荐">1月31日→18.4M/S|2025年最新免费节点Shadowrocket节点/Clash节点/SSR节点/Trojan节点/V2ray节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-20-free-node-subscribe.htm" title="1月20日→22M/S|2025年最新免费节点Singbox节点/Shadowrocket节点/Trojan节点/V2ray节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐">1月20日→22M/S|2025年最新免费节点Singbox节点/Shadowrocket节点/Trojan节点/V2ray节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-5-free-ssr-subscribe.htm" title="2月5日→22.1M/S|2025年最新免费节点Singbox节点/V2ray节点/SSR节点/Shadowrocket节点/Clash节点/Trojan节点订阅链接地址，便宜机场推荐">2月5日→22.1M/S|2025年最新免费节点Singbox节点/V2ray节点/SSR节点/Shadowrocket节点/Clash节点/Trojan节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-21-free-subscribe-node.htm" title="1月21日→22.8M/S|2025年最新免费节点SSR节点/Singbox节点/Shadowrocket节点/Clash节点/Trojan节点/V2ray节点订阅链接地址，便宜机场推荐">1月21日→22.8M/S|2025年最新免费节点SSR节点/Singbox节点/Shadowrocket节点/Clash节点/Trojan节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-3-clash-v2ray-ss-ssr.htm" title="2月3日→21.2M/S|2025年最新免费节点V2ray节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点/Trojan节点订阅链接地址，便宜机场推荐">2月3日→21.2M/S|2025年最新免费节点V2ray节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点/Trojan节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-6-clash-windows.htm" title="1月6日→20.9M/S|2025年最新免费节点Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点订阅链接地址，便宜机场推荐">1月6日→20.9M/S|2025年最新免费节点Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-2-free-v2ray-subscribe.htm" title="2月2日→20.2M/S|2025年最新免费节点Singbox节点/Clash节点/Shadowrocket节点/Trojan节点/SSR节点/V2ray节点订阅链接地址，便宜机场推荐">2月2日→20.2M/S|2025年最新免费节点Singbox节点/Clash节点/Shadowrocket节点/Trojan节点/SSR节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-7-clash-windows.htm" title="1月7日→19.3M/S|2025年最新免费节点Clash节点/SSR节点/V2ray节点/Singbox节点/Shadowrocket节点订阅链接地址，便宜机场推荐">1月7日→19.3M/S|2025年最新免费节点Clash节点/SSR节点/V2ray节点/Singbox节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-1-free-node-subscribe.htm" title="2月1日→22.8M/S|2025年最新免费节点Singbox节点/Trojan节点/Clash节点/Shadowrocket节点/SSR节点/V2ray节点订阅链接地址，便宜机场推荐">2月1日→22.8M/S|2025年最新免费节点Singbox节点/Trojan节点/Clash节点/Shadowrocket节点/SSR节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -314,10 +314,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2026-01/" title="2026-01 归档">2026-01</a></h4>
+                <h4><span class="badge" style="float: right;">5</span> <a href="/date/2026-02/" title="2026-02 归档">2026-02</a></h4>
             </li>
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">19</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
+                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2026-01/" title="2026-01 归档">2026-01</a></h4>
             </li>
                     </ul>
     </div>
