--- a/date/2026-01/index.htm
+++ b/date/2026-01/index.htm
@@ -123,6 +123,34 @@
         <div class="col-md-9">
             <!-- welcome -->
             <div class="xcblog-blog-list">
+                                    <div class="welcome xcblog-blog-item" data-date="2026-01-31">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2026-1-31-free-subscribe-node.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/33b1ff2369380b61bcbd99951db89701.webp" alt="1月31日→18.4M/S|2025年最新免费节点Shadowrocket节点/Clash节点/SSR节点/Trojan节点/V2ray节点/Singbox节点订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2026-1-31-free-subscribe-node.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">1月31日→18.4M/S|2025年最新免费节点Shadowrocket节点/Clash节点/SSR节点/Trojan节点/V2ray节点/Singbox节点订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了欧洲、香港、新加坡、韩国、加拿大、美国、日本等地区,最高速度可达18.4 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
+                                    <div class="welcome xcblog-blog-item" data-date="2026-01-30">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2026-1-30-free-ssr-subscribe.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/dcf34dc84fbab448f7946e41c45555d6.webp" alt="1月30日→18.2M/S|2025年最新免费节点Trojan节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点/SSR节点订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2026-1-30-free-ssr-subscribe.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">1月30日→18.2M/S|2025年最新免费节点Trojan节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点/SSR节点订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了欧洲、日本、香港、韩国、加拿大、美国、新加坡等地区,最高速度可达18.2 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                     <div class="welcome xcblog-blog-item" data-date="2026-01-29">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2026-1-29-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
@@ -235,34 +263,6 @@
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                                    <div class="welcome xcblog-blog-item" data-date="2026-01-21">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2026-1-21-free-subscribe-node.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/cf4b7d70d0b73f0bfc03a06c4aff020d.webp" alt="1月21日→22.8M/S|2025年最新免费节点SSR节点/Singbox节点/Shadowrocket节点/Clash节点/Trojan节点/V2ray节点订阅链接地址，便宜机场推荐" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2026-1-21-free-subscribe-node.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">1月21日→22.8M/S|2025年最新免费节点SSR节点/Singbox节点/Shadowrocket节点/Clash节点/Trojan节点/V2ray节点订阅链接地址，便宜机场推荐</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了日本、韩国、加拿大、香港、新加坡、美国、欧洲等地区,最高速度可达22.8 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
-                                    <div class="welcome xcblog-blog-item" data-date="2026-01-20">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2026-1-20-free-node-subscribe.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/d3c24bb20e9a1c8c2d93a6bf044ee5c4.webp" alt="1月20日→22M/S|2025年最新免费节点Singbox节点/Shadowrocket节点/Trojan节点/V2ray节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2026-1-20-free-node-subscribe.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">1月20日→22M/S|2025年最新免费节点Singbox节点/Shadowrocket节点/Trojan节点/V2ray节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了加拿大、美国、欧洲、香港、韩国、日本、新加坡等地区,最高速度可达22 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
                             </div>
             <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/date/2026-01/page-2.htm">2</a></li><li><a href="/date/2026-01/page-3.htm">3</a></li> <li><a href="/date/2026-01/page-2.htm">&raquo;</a></li></ul>            <!-- //welcome -->
         </div>
@@ -273,16 +273,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2026-1-6-clash-windows.htm" title="1月6日→20.9M/S|2025年最新免费节点Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点订阅链接地址，便宜机场推荐">1月6日→20.9M/S|2025年最新免费节点Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-18-clash-windows.htm" title="1月18日→19.4M/S|2025年最新免费节点Clash节点/SSR节点/Singbox节点/Trojan节点/V2ray节点/Shadowrocket节点订阅链接地址，便宜机场推荐">1月18日→19.4M/S|2025年最新免费节点Clash节点/SSR节点/Singbox节点/Trojan节点/V2ray节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-12-free-high-speed-nodes.htm" title="1月12日→18.6M/S|2025年最新免费节点Clash节点/Singbox节点/V2ray节点/SSR节点/Shadowrocket节点订阅链接地址，便宜机场推荐">1月12日→18.6M/S|2025年最新免费节点Clash节点/Singbox节点/V2ray节点/SSR节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-19-node-share.htm" title="1月19日→18.6M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Trojan节点/Singbox节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐">1月19日→18.6M/S|2025年最新免费节点Shadowrocket节点/V2ray节点/Trojan节点/Singbox节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-2-3-clash-v2ray-ss-ssr.htm" title="2月3日→21.2M/S|2025年最新免费节点V2ray节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点/Trojan节点订阅链接地址，便宜机场推荐">2月3日→21.2M/S|2025年最新免费节点V2ray节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点/Trojan节点订阅链接地址，便宜机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2026-1-10-free-node-subscribe.htm" title="1月10日→20M/S|2025年最新免费节点Singbox节点/SSR节点/Clash节点/V2ray节点/Shadowrocket节点订阅链接地址，便宜机场推荐">1月10日→20M/S|2025年最新免费节点Singbox节点/SSR节点/Clash节点/V2ray节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-17-clash-node.htm" title="1月17日→21.2M/S|2025年最新免费节点Clash节点/SSR节点/Trojan节点/V2ray节点/Singbox节点/Shadowrocket节点订阅链接地址，便宜机场推荐">1月17日→21.2M/S|2025年最新免费节点Clash节点/SSR节点/Trojan节点/V2ray节点/Singbox节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-10-clash-node.htm" title="12月10日→19.3M/S|2025年最新免费节点Shadowrocket节点/Singbox节点/Clash节点/SSR节点/V2ray节点订阅链接地址，便宜机场推荐">12月10日→19.3M/S|2025年最新免费节点Shadowrocket节点/Singbox节点/Clash节点/SSR节点/V2ray节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-12-15-node-share-links.htm" title="12月15日→22.5M/S|2025年最新免费节点Shadowrocket节点/Clash节点/V2ray节点/SSR节点/Singbox节点订阅链接地址，便宜机场推荐">12月15日→22.5M/S|2025年最新免费节点Shadowrocket节点/Clash节点/V2ray节点/SSR节点/Singbox节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-26-free-subscribe-node.htm" title="1月26日→22.8M/S|2025年最新免费节点Singbox节点/Shadowrocket节点/Trojan节点/Clash节点/V2ray节点/SSR节点订阅链接地址，便宜机场推荐">1月26日→22.8M/S|2025年最新免费节点Singbox节点/Shadowrocket节点/Trojan节点/Clash节点/V2ray节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-22-free-v2ray-subscribe.htm" title="1月22日→23M/S|2025年最新免费节点V2ray节点/Singbox节点/Clash节点/Shadowrocket节点/Trojan节点/SSR节点订阅链接地址，便宜机场推荐">1月22日→23M/S|2025年最新免费节点V2ray节点/Singbox节点/Clash节点/Shadowrocket节点/Trojan节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-24-node-share-links.htm" title="1月24日→18M/S|2025年最新免费节点V2ray节点/SSR节点/Shadowrocket节点/Trojan节点/Singbox节点/Clash节点订阅链接地址，便宜机场推荐">1月24日→18M/S|2025年最新免费节点V2ray节点/SSR节点/Shadowrocket节点/Trojan节点/Singbox节点/Clash节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-5-shadowrocket-node.htm" title="1月5日→20.9M/S|2025年最新免费节点SSR节点/Singbox节点/V2ray节点/Shadowrocket节点/Clash节点订阅链接地址，便宜机场推荐">1月5日→20.9M/S|2025年最新免费节点SSR节点/Singbox节点/V2ray节点/Shadowrocket节点/Clash节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-16-free-v2ray.htm" title="1月16日→22.1M/S|2025年最新免费节点Singbox节点/V2ray节点/Clash节点/SSR节点/Shadowrocket节点订阅链接地址，便宜机场推荐">1月16日→22.1M/S|2025年最新免费节点Singbox节点/V2ray节点/Clash节点/SSR节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2026-1-29-clash-v2ray-ss-ssr.htm" title="1月29日→20.5M/S|2025年最新免费节点SSR节点/Singbox节点/Clash节点/V2ray节点/Trojan节点/Shadowrocket节点订阅链接地址，便宜机场推荐">1月29日→20.5M/S|2025年最新免费节点SSR节点/Singbox节点/Clash节点/V2ray节点/Trojan节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-11-free-shadowrocket-node.htm" title="1月11日→21M/S|2025年最新免费节点Singbox节点/SSR节点/V2ray节点/Clash节点/Shadowrocket节点订阅链接地址，便宜机场推荐">1月11日→21M/S|2025年最新免费节点Singbox节点/SSR节点/V2ray节点/Clash节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2026-1-14-clash-windows.htm" title="1月14日→18.7M/S|2025年最新免费节点Singbox节点/SSR节点/V2ray节点/Clash节点/Shadowrocket节点订阅链接地址，便宜机场推荐">1月14日→18.7M/S|2025年最新免费节点Singbox节点/SSR节点/V2ray节点/Clash节点/Shadowrocket节点订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-20-free-node-subscribe.htm" title="1月20日→22M/S|2025年最新免费节点Singbox节点/Shadowrocket节点/Trojan节点/V2ray节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐">1月20日→22M/S|2025年最新免费节点Singbox节点/Shadowrocket节点/Trojan节点/V2ray节点/Clash节点/SSR节点订阅链接地址，便宜机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -294,10 +294,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2026-01/" title="2026-01 归档">2026-01</a></h4>
+                <h4><span class="badge" style="float: right;">5</span> <a href="/date/2026-02/" title="2026-02 归档">2026-02</a></h4>
             </li>
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">19</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
+                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2026-01/" title="2026-01 归档">2026-01</a></h4>
             </li>
                     </ul>
     </div>
